--- a/client/templates/website/home/home.html
+++ b/client/templates/website/home/home.html
@@ -12,7 +12,7 @@
 
 	<div class="fit-container pdtb60 background-screen fixed" style="background-image: url('/bg2.jpg');" data-bottom-top="background-position: center 400px;" data--200p-bottom-top="background-position: center -400px;"></div>
 
-	<div class="pd60" id="news-section">
+	<div class="pd60" name="news-section">
 		<div class="container">
 			<h1 class="text-right black">公司动态</h1>
 			<div class="row">
@@ -39,9 +39,9 @@
 				<div class="col-md-7">
 					<h1 class="black">关于我们</h1>
 					<div class="text-medium text-indent">
-						<p>球果通信是一家专业的通信工程服务公司，作为有志于在信息技术大发展时代有所作为的公司，我们的业务范围涵盖了从通信工程、通信维护、通信业务销售代理、网络应用技术开发推广、网络及通信设备推广销售等信息服务领域。我们有能力和信念经过几年时间的发展，为客户提供最具信赖的支持服务，为客户提供优质先进的信息化应用方案与产品。</p>
+						<p>我们是一家专业的通信工程服务公司，作为有志于在信息技术大发展时代有所作为的公司，我们的业务范围涵盖了从通信工程、通信维护、通信业务销售代理、网络应用技术开发推广、网络及通信设备推广销售等信息服务领域。我们有能力和信念经过几年时间的发展，为客户提供最具信赖的支持服务，为客户提供优质先进的信息化应用方案与产品。</p>
 						<p>致力于为客户提供最优质的服务，这与公司的核心价值、服务理念相一致，也和公司肩负的社会责任相契合。我们竭尽所能协助客户创建优质工程项目，降低运营成本，提高运营效率和市场竞争力， 帮助客户打破资源的限制开拓市场，并运用各种方式增加收益。我们深知，企业的快速发展得益于专业的技术背景与执着的信念，而在发展过程中我们也在不断地寻求突破和创新，并期望成为通信行业最值得信赖的合作伙伴！</p>
-						<p>“精益求精 言信行果”浓缩了球果通信的价值观和倡导奉行的发展理念。公司一直提倡员工秉承积极进取的态度，执着专注于信息服务，密切团队协作，不断创新发展，创造开放自由的环境，培养坚韧不拔、永不放弃的性格，为亲人，为家庭，为更美好的人生自信奋斗。当我们能如此的要求自己，心中的智慧自然就会油然而生，才能去包容一切、去创造美好。</p>
+						<p>“精益求精 言信行果”浓缩了我们的价值观和倡导奉行的发展理念。公司一直提倡员工秉承积极进取的态度，执着专注于信息服务，密切团队协作，不断创新发展，创造开放自由的环境，培养坚韧不拔、永不放弃的性格，为亲人，为家庭，为更美好的人生自信奋斗。当我们能如此的要求自己，心中的智慧自然就会油然而生，才能去包容一切、去创造美好。</p>
 					</div>
 				</div>
 			</div>
@@ -59,7 +59,7 @@
 					</div>
 					<h3 class="black text-center">服务理念</h3>
 					<p class="text-medium text-indent">
-						球果通信始终坚守“精益求精 言信行果”的服务理念和企业精神，不断调整和创新我们的技术和管理，为客户提供最优质的服务支持。
+						我们始终坚守“精益求精 言信行果”的服务理念和企业精神，不断调整和创新我们的技术和管理，为客户提供最优质的服务支持。
 					</p>
 				</div>
 
@@ -69,7 +69,7 @@
 					</div>
 					<h3 class="black text-center">核心价值</h3>
 					<p class="text-medium text-indent">
-						球果通信倡导人文关怀，注重员工成长，努力营造一个充满生机的企业氛围，引导所有成员树立仁爱、正直、责任的精神，鼓励员工传播这种文化，以此为家庭、社会贡献更大的企业价值。
+						我们倡导人文关怀，注重员工成长，努力营造一个充满生机的企业氛围，引导所有成员树立仁爱、正直、责任的精神，鼓励员工传播这种文化，以此为家庭、社会贡献更大的企业价值。
 					</p>
 				</div>
 
@@ -79,7 +79,7 @@
 					</div>
 					<h3 class="black text-center">发展策略</h3>
 					<p class="text-medium text-indent">
-						优秀的人才是企业创新与进步的基石，球果通信珍视人才的培养与成长，努力为员工的快速健康发展搭建一个最具优势的平台。
+						优秀的人才是企业创新与进步的基石，我们珍视人才的培养与成长，努力为员工的快速健康发展搭建一个最具优势的平台。
 					</p>
 				</div>
 
@@ -101,7 +101,7 @@
 	<div class="pdtb60 background-color-white">
 		<div class="container">
 			<h1 class="black">团队精英</h1>
-			<p class="mgb60 text-medium text-indent">球果通信是一个紧密协作的团队，我们将不断努力开拓，每一次成功的背后，都洒满了奋斗的艰辛与汗水。今后，我们将继续坚守那份不变的承诺，继往开来，为更好的明天而拼搏！</p>
+			<p class="mgb60 text-medium text-indent">我们是一个紧密协作的团队，我们将不断努力开拓，每一次成功的背后，都洒满了奋斗的艰辛与汗水。今后，我们将继续坚守那份不变的承诺，继往开来，为更好的明天而拼搏！</p>
 			<div class="row">
 				<div class="col-md-3">
 					<div class="website-circle-image">
@@ -157,6 +157,7 @@
 				</div>
 
 				<div class="col-md-4">
+					<img src="/proxy.jpg" alt="" class="mgb30 fit-width">
 					<h2 class="black">代理业务</h2>
 					<ul class="text-medium">
 						<li>
@@ -188,7 +189,7 @@
 							<a href="javascript:;">大型商业应用开发、云端开发</a>
 						</li>
 						<li>
-							<a href="">Node.js 应用开发</a>
+							<a href="javascript:;">Node.js / Express.js / Koa.js / Total.js / Meteor.js  应用开发</a>
 						</li>
 					</ul>
 				</div>
