--- a/client/templates/website/home/modules/contact.html
+++ b/client/templates/website/home/modules/contact.html
@@ -16,6 +16,13 @@
 					</div>
 
 					<div class="mgb30">
+						<h5 class="black">公司地址</h5>
+						<h3 class="black">
+							<i class="fa fa-map-marker"></i> 哈尔滨市道里区中医街69号二单元202室
+						</h3>
+					</div>
+
+					<div class="mgb30">
 						<h5 class="black">联络方式</h5>
 						<h3 class="mgb15 black">
 							<i class="fa fa-phone"></i> 18945666008
@@ -28,9 +35,6 @@
 						</h3>
 						<h3 class="mgb15 black">
 							<i class="fa fa-inbox"></i> zxg7766@163.com
-						</h3>
-						<h3 class="mgb15 black">
-							<i class="fa fa-map-marker"></i> 黑龙江省哈尔滨市道里区中医街69号二单元202室
 						</h3>
 					</div>
 
@@ -51,7 +55,7 @@
 					{{> contactForm}}
 				</div>
 			</div>
-			<p class="text-center">&copy; 2013 球果通信(Conecomm.cn) All Right Reserved</p>
+			<p class="text-center">&copy; 2013 ~ {{thisYear}} 球果通信(www.qiuguotongxin.com) All Right Reserved</p>
 			<p class="text-center">黑ICP</p>
 		</div>
 	</div>
@@ -73,7 +77,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<textarea rows="6" class="form-control" placeholder="输入留言内容。。。" required></textarea>
+			<textarea rows="6" class="form-control" placeholder="留言内容。。。" required></textarea>
 		</div>
 		<div class="form-group">
 			<input type="submit" class="btn btn-default btn-lg" value="提交">
