--- a/client/templates/website/ui/topnav.html
+++ b/client/templates/website/ui/topnav.html
@@ -4,7 +4,7 @@
 		<div class="container">
 			<ul class="pull-right hidden-xs">
 				<li>
-					<a data-scroll data-speed="2000" data-easing="linear" data-url="true" href="#news-section">公司动态</a>
+					<a data-scroll data-speed="2000" data-easing="linear" data-url="false" href="#news-section">公司动态</a>
 				</li>
 				<li>
 					<a href="javascript:;">关于我们</a>
